# Keiko-Native

./: .gitignore  .markdown-quality.json  .markdownlint-cli2.jsonc  .prettierignore  AGENTS.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  package-lock.json  package.json  socket.yml  sonar-project.properties
.gitar/review/: 00-governance-and-delivery.md  10-security-and-trust-boundaries.md  20-native-architecture-quality-and-evidence.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  zizmor.yml
.github/ISSUE_TEMPLATE/: decision_evaluation.md  defect_finding.md  epic.md  feature_task.md
.github/workflows/: ci.yml  codeql.yml  contract-publication.yml  dependency-review.yml  foundation-evaluation.yml  internal-release.yml  issue-lifecycle.yml  issue-readiness.yml  merge-group.yml  mutation-security.yml  osv-scanner.yml  pr-contract.yml
docs/adr/: ADR-0001-keiko-parity-quality-gate-baseline.md  ADR-0002-keiko-owned-agentic-control-plane.md  ADR-0003-free-tier-sonar-and-epic-delivery.md  ADR-0003-repository-backed-planning-contracts.md  ADR-0004-readiness-authority-and-workflow-lifecycle.md  ADR-0004-tauri-macos-foundation-stack.md  ADR-0005-free-tier-sonar-and-epic-delivery.md  ADR-0006-tauri-macos-foundation-stack.md  ADR-0007-internal-unsigned-macos-release-engineering.md  ADR-0008-restricted-broker-epic-auto-merge.md  ADR-0009-agent-scoped-maintainer-credential-epic-merge.md  README.md
docs/engineering/: code-quality-standard.md
docs/evaluation/: codex-0.145.0-rejection.json  codex-0.145.0-rejection.md  evidence-index.md  paper-screen.md  (+5 more)
experiments/desktop-host-evaluation/: .gitignore  Cargo.toml  README.md  paper-screen.md  sources.json
experiments/desktop-host-evaluation/candidates/slint/: Cargo.toml  LICENSES.md  build.rs
experiments/desktop-host-evaluation/candidates/slint/src/: lib.rs  main.rs  ports.rs  state.rs
experiments/desktop-host-evaluation/candidates/slint/tests/: controller.rs  evaluation_close.rs  release_isolation.rs
experiments/desktop-host-evaluation/candidates/slint/ui/: app.slint
experiments/desktop-host-evaluation/candidates/tauri/: Cargo.toml  README.md  build.rs  tauri.conf.json
experiments/desktop-host-evaluation/candidates/tauri/capabilities/: main-shell.json
experiments/desktop-host-evaluation/candidates/tauri/src/: application.rs  boundary.rs  evaluation_assets.rs  evaluation_close.rs  evaluation_ready.rs  lib.rs  main.rs  model.rs
experiments/desktop-host-evaluation/candidates/tauri/tests/: contracts.rs  evaluation_readiness.rs
experiments/desktop-host-evaluation/candidates/tauri/web/: app.js  index.html  styles.css
experiments/desktop-host-evaluation/src/: benchmark.rs  cli.rs  contract.rs  evidence.rs  lib.rs  lifecycle.rs  main.rs  package.rs  runner.rs  runner_close.rs  runner_error.rs  runner_evidence.rs  runner_package.rs  runner_platform.rs  runner_support.rs  runner_support_tests.rs  runner_tests.rs  statistics.rs
experiments/desktop-host-evaluation/tests/: cli.rs  contract.rs  evidence_contract.rs  lifecycle.rs  release_isolation.rs  sanitizer.rs  statistics.rs
experiments/slint-renderer/: Cargo.toml  build.rs
experiments/slint-renderer/src/: evaluation.rs  main.rs  native_dialog.m
experiments/slint-renderer/ui/: main.slint
experiments/tauri-renderer/: Cargo.toml  build.rs  evaluation.config.json  tauri.conf.json
experiments/tauri-renderer/capabilities/evaluation/: foundation-evaluation.json
experiments/tauri-renderer/permissions/evaluation/: evaluation-dispatch.toml
experiments/tauri-renderer/src/: evaluation.rs  main.rs  native_dialog.m
experiments/tauri-renderer/web/: package-lock.json  package.json  tsconfig.json  vite.evaluation.config.ts  vite.release.config.ts
experiments/tauri-renderer/web/evaluation/: index.html  probe.html
experiments/tauri-renderer/web/evaluation/src/: main.tsx  probe.ts
experiments/tauri-renderer/web/release/: index.html
experiments/tauri-renderer/web/release/src/: main.tsx
experiments/tauri-renderer/web/shared/: Shell.tsx  styles.css
native/: Cargo.toml  package-policy.json  third-party-notices.json
native/apps/keiko-desktop/: Cargo.toml  tauri.conf.json
native/apps/keiko-desktop/src/: main.rs
native/crates/keiko-application/: Cargo.toml
native/crates/keiko-application/src/: lib.rs
native/crates/keiko-host-macos/: Cargo.toml
native/crates/keiko-host-macos/src/: acknowledgement.rs  adapter_tests.rs  document_nonce.rs  foundation.rs  lib.rs  request_adapter.rs  request_timing.rs  tauri_adapter.rs  tauri_adapter_tests.rs  tests.rs  timing_tests.rs
native/crates/keiko-ui-port/: Cargo.toml
native/crates/keiko-ui-port/src/: lib.rs
native/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
native/frontend/src/: foundation.accessibility.test.ts  foundation.css  foundation.test.ts  foundation.ts  main.test.ts  main.ts  port.test.ts  port.ts
native/tests/: contract.test.mjs
quality/: attestation-policy.mjs  attestation-policy.test.mjs  check-native-vulnerability-results.mjs  check-toolchain.mjs  check.mjs  codex-compatibility.mjs  codex-compatibility.test.mjs  contract.mjs  contract.test.mjs  coverage-reporter.mjs  coverage-reporter.test.mjs  deterministic-order.mjs  deterministic-order.test.mjs  epic-merge-broker-capability.mjs  epic-merge-broker-capability.test.mjs  epic-merge-broker-effect.mjs  epic-merge-broker-effect.test.mjs  epic-merge-broker-receipt-crypto.mjs  epic-merge-broker-receipt.mjs  epic-merge-broker-receipt.test.mjs  epic-merge-broker.mjs  epic-merge-broker.test.mjs  evaluate-codex-compatibility.mjs  foundation-evaluation.test.mjs  generate-native-vulnerability-inventory.mjs  git-integrity.mjs  git-integrity.test.mjs  github-api.mjs  github-api.test.mjs  github-reference.mjs  github-reference.test.mjs  internal-release-workflow.mjs  internal-release.mjs  internal-release.test.mjs  iso-normalization.mjs  iso-normalization.test-fixture.mjs  issue-contract.mjs  issue-contract.test.mjs  issue-lifecycle-action.mjs  issue-lifecycle-action.test.mjs  (+123 more)
(+17 files in other folders)
