[package]
name = "keiko-foundation-tauri-evaluation"
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"
publish = false
rust-version = "1.92"
build = "build.rs"

[features]
default = []
evaluation-hook = []

[build-dependencies]
serde_json = "=1.0.145"
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
tauri = { version = "=2.11.5", default-features = false, features = ["wry"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
