[package]
name = "keiko-native-desktop"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "keiko-native-desktop"
path = "src/main.rs"

[dependencies]
keiko-host-macos.workspace = true
tauri.workspace = true

[build-dependencies]
tauri-build.workspace = true
