[package]
name = "keiko-host-macos"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
keiko-application.workspace = true
keiko-ui-port.workspace = true
serde_json.workspace = true
tauri = { workspace = true, optional = true, features = ["wry"] }
wry = { workspace = true, optional = true }

[features]
default = ["tauri-host"]
tauri-host = ["dep:tauri", "dep:wry"]
