[package]
name = "keiko-tauri-prototype"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"
rust-version = "1.92.0"

[lib]
name = "keiko_tauri_prototype"
path = "src/lib.rs"

[[bin]]
name = "keiko-tauri-prototype"
path = "src/main.rs"

[[bin]]
name = "keiko-tauri-fixture-child"
path = "src/bin/keiko-tauri-fixture-child.rs"
required-features = ["evaluation-hooks"]

[dependencies]
keiko-desktop-host-evaluation = { path = "../.." }
rfd = "=0.15.4"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.140"
tauri = { version = "=2.11.5", default-features = false, features = ["wry"] }
thiserror = "=2.0.12"

[build-dependencies]
tauri-build = "=2.6.3"

[features]
default = []
evaluation-hooks = []
